wording in motion to modify intro Close #42, address #35

--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -156,8 +156,8 @@ subquestion: |
 
   You should only run this tool if you are the **Plaintiff**,  that is:
   
-  1. you personally have previously applied for an Abuse Prevention Order; **and**
-  1. you wish to either modify your existing order or to terminate your order.
+  1. you have an Abuse Prevention Order; **and**
+  1. you need to either change your existing order or to end your order.
 
   If you are not the plaintiff or if you are the subject of an Abuse Prevention Order, then
   **do not run this tool**.  Instead, you should **TODO: INSTRUCTIONS TO GO HERE**.
