--- a/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
+++ b/docassemble/209aPlaintiffMotionToModify/data/questions/209a_plaintiff_s_motion_to_modify.yml
@@ -307,6 +307,7 @@ subquestion: |
 progress: 95
 ---
 id: preview
+reconsider: True
 attachment:
     variable name: a_plaintiff_s_motion_to_modify_qc_v20009_attachment_preview
     name: Plaintiff\'s Motion to Modify or Terminate an Abuse Prevention Order - 209a
